@@ -9,6 +9,16 @@ package TestCase::ExchangeAPI {
   
   sub FLOAT_PRECICE : float () { return 16384.5f; }
   sub DOUBLE_PRECICE : double () { return 65536.5; }
+
+  sub set_exception : int () {
+    my $exception = $@;
+    
+    unless ($exception eq "あいう") {
+      return 0;
+    }
+    
+    return 1;
+  }
   
   sub any_object_array : oarray ($oarray : oarray) {
     
