@@ -2,6 +2,9 @@
   - Change IO::File::write, IO::Socket::write to 
       sub write : int ($self : self, $buffer : string, $legnth : int);
   - add fileno to SPVM::IO::Socket
+  - add SPVM::IO::Select
+  - remove SPVM::set_exception_undef
+  - add SPVM::set_exception
 0.0432 2018-04-29
   - Allow lower case package variable name and allow upper case lexical variable name
     This is same implementation as Perl
